# sap_warp

./: .gitignore  README.md  benchmark.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  sap_with_newton.py  search.html  searchindex.js
.github/workflows/: docs.yml
_modules/: benchmark.html  index.html
_modules/sim/: contact_jacobian.html  contact_solve.html  free_motion.html  sap_runtime.html  solver_sap.html
_sources/api/: index.rst.txt
_sources/concepts/: solver.rst.txt
_sources/guide/: installation.rst.txt  quickstart.rst.txt
_sources/simulation/: newton_integration.rst.txt
_sources/visualization/: viser.rst.txt
_static/: custom.css
api/: index.html
api/_generated/: benchmark.build_parser.html  benchmark.run_native.html  sim.collision.contacts.SapContacts.html  sim.collision.pipeline.SapCollisionPipeline.collide.html  sim.collision.pipeline.SapCollisionPipeline.contacts.html  sim.collision.pipeline.SapCollisionPipeline.html  sim.collision.pipeline.sap_estimate_rigid_contact_max.html  sim.collision.pipeline.sap_normalize_broad_phase_mode.html  sim.sap_helpers.html  (+31 more)
benchmarking/: index.html
concepts/: collision.html  convention.html  loader.html  solver.html
docs/: Makefile  conf.py  index.rst  requirements.txt
guide/: installation.html  overview.html  quickstart.html
sim/: blocked_cholesky.py  contact_jacobian.py  contact_solve.py  free_motion.py  sap_helpers.py  sap_kinematics.py  sap_runtime.py  solver_sap.py
simulation/: newton_integration.html
viewer/: __init__.py
visualization/: index.html  viser.html
(+105 files in other folders)
