[project]
name = "sap-warp"
version = "0.1.0"
description = "Minimal Warp-based SAP rigid-body simulator."
readme = "README.md"
authors = [
    { name = "AIVC Lab and TRI" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy==1.26.4",
    "pycollada>=0.8",
    "pyyaml==6.0.2",
    "scipy>=1.15.2",
    "viser>=1.0.27",
    "warp-lang>=1.7.0.dev20250823",
    "usd-core>=25.5 ; platform_machine != 'aarch64'",
    "usd-exchange>=2.1.0a3 ; platform_machine == 'aarch64'",
]

[project.optional-dependencies]
mesh = [
    "trimesh>=4.6.8",
]

[tool.uv]
index-url = "https://pypi.org/simple"
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[tool.uv.sources]
warp-lang = { index = "nvidia" }

[dependency-groups]
dev = [
    "asv>=0.6.4",
    "ruff>=0.8.0",
]
docs = [
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-copybutton==0.5.2",
    "sphinx-design==0.6.1",
    "sphinx==7.4.7",
]

[tool.ruff]
line-length = 120
indent-width = 4
